fix: redis and mongo connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,6 @@ services:
     image: postgres
     container_name: "db_postgres"
     env_file: .env
-#    volumes:
-#      - .deploy/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 1s
@@ -16,12 +14,15 @@ services:
     ports:
       - "5445:5445"
     command: -p 5445
+
   db_mongo:
     container_name: "db_mongo"
     image: mongo:5.0
     environment:
       - MONGO_INITDB_ROOT_USERNAME=AzureDiamond
       - MONGO_INITDB_ROOT_PASSWORD=hunter2
+    expose:
+      - "27017"
     ports:
       - '27017:27017'
 
@@ -29,6 +30,8 @@ services:
     container_name: "db_redis"
     image: "redis:alpine"
     command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    expose:
+      - "6379"
     ports:
       - "6379:6379"
 
@@ -38,7 +41,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     environment:
-      - MONGODB_CONNSTRING=mongodb:27017//AzureDiamond:hunter2@mongodb
+      - MONGODB_CONNSTRING=db_mongo:27017//AzureDiamond:hunter2@db_mongo
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db_postgres:5445/postgres
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
